# openmessaging-cpp-jni

./: .aone.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  ci.sh  dist.sh  install_boost.sh  install_oms_impl.sh  oms.conf
benchmark/: CMakeLists.txt  ExampleBenchmarkTest.cpp  FixtureBenchmarkTest.cpp  ProducerImplBenchmarkTest.cpp
doc/: ApplicationDesignSpecification.md  Debug.md  DevelopmentGuide.md  DynamicLink.md  Export.md  JNI_Introduction.md  JNI_RunJavaCode.md  Todo.md  build_boost.txt
example/: CMakeLists.txt  Makefile  Producer.c  Producer.cpp  PullConsumer.cpp  PushConsumer.cpp  build.sh  example_generic.cpp  main.cpp
include/: BuiltinKeys.h  ByteMessage.h  Future.h  FutureListener.h  KeyValue.h  Message.h  MessageFactory.h  MessagingAccessPoint.h  MessagingAccessPointFactory.h  OMS.h  OMSBuiltinKeys.h  OMSException.h  OpenMessaging.h  Promise.h  ResourceManager.h  ServiceLifecycle.h  shared_ptr.hpp  smart_pointer.h
include/consumer/: Context.h  MessageIterator.h  MessageListener.h  PullConsumer.h  PushConsumer.h  PushConsumerInterceptor.h  Stream.h  StreamConsumer.h  StreamingConsumer.h
include/interceptor/: ConstructMessagingAccessPointContext.h  ConsumerInterceptor.h  MessagingAccessPointInterceptor.h  ProducerInterceptor.h  PushConsumerInterceptor.h
include/observer/: OMSEvent.h  OMSExceptionEvent.h  Observer.h
include/producer/: BatchMessageSender.h  CheckContext.h  ExecutionContext.h  LocalTransactionBranchExecutor.h  LocalTransactionCheckContext.h  LocalTransactionExecutionContext.h  LocalTransactionExecutor.h  Producer.h  SendResult.h
include/routing/: Operator.h  Routing.h
rpm/: t-middleware-openmessaging-cpp-build.sh  t-middleware-openmessaging-cpp.deps  t-middleware-openmessaging-cpp.spec
sdk/: BuiltinKeys.cpp  ByteMessageImpl.cpp  CMakeLists.txt  CountdownLatch.cpp  CurrentEnv.cpp  JavaOption.cpp  KeyValueImpl.cpp  MessagingAccessPointFactory.cpp  MessagingAccessPointImpl.cpp  OMS.cpp  OpenMessaging.cpp  ProducerImpl.cpp  PromiseImpl.cpp  PullConsumerImpl.cpp  PushConsumerImpl.cpp  ServiceLifecycleImpl.cpp  StreamingConsumerImpl.cpp  core.cpp
sdk/consumer/: ContextImpl.cpp  PullConsumerImpl.cpp  PushConsumerImpl.cpp  StreamImpl.cpp  StreamingConsumerImpl.cpp  StreamingIteratorImpl.cpp
sdk/include/: ByteMessageImpl.h  CountdownLatch.h  CurrentEnv.h  JavaOption.h  KeyValueImpl.h  MessagingAccessPointImpl.h  NonStandardKeys.h  ProducerImpl.h  PromiseImpl.h  PullConsumerImpl.h  PushConsumerImpl.h  ServiceLifecycleImpl.h  Singleton.h  StreamingConsumerImpl.h  core.h
sdk/include/consumer/: ContextImpl.h  PullConsumerImpl.h  PushConsumerImpl.h  StreamImpl.h  StreamingConsumerImpl.h  StreamingIteratorImpl.h
sdk/include/plog/: Log.h  Util.h
sdk/include/producer/: BatchMessageSenderImpl.h  LocalTransactionBranchExecutorImpl.h  LocalTransactionExecutorImpl.h  ProducerImpl.h  SendResultImpl.h
sdk/producer/: BatchMessageSenderImpl.cpp  LocalTransactionBranchExecutorImpl.cpp  ProducerImpl.cpp  SendResultImpl.cpp
swig/: OpenMessaging.i
tests/: ByteMessageImplTest.cpp  BytesMessageImplTest.cpp  CMakeLists.txt  CoreTest.cpp  CountdownLatch.cpp  CountdownLatchTest.cpp  CurrentEnvTest.cpp  KeyValueImplTest.cpp  KeyValueTest.cpp  ManagedArrayTest.cpp  MessagingAccessPointFactoryImplTest.cpp  NonStandardKeys.cpp  OMSTest.cpp  ProducerImplTest.cpp  PromiseImplTest.cpp  PullConsumerImplTest.cpp  PushConsumerImplTest.cpp  RunAllTest.cpp  ServerTest.cpp  SingletonTest.cpp  UncopyableTest.cpp  scoped_array_test.cpp  smart_pointer_test.cpp
tests/include/: BaseTest.h  CountdownLatch.h  NonStandardKeys.h
